objects/Contract_Header__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Contract Headers</relationshipLabel>
        <relationshipName>Service_Contract_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Account_Name__r.Bill_To_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sub_Region__c</fullName>
        <formula>Account_Name__r.Bill_To_Sub_Region__c</formula>
        <label>Account Sub-Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Contract Headers (Bill To Account)</relationshipLabel>
        <relationshipName>Service_Contract_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Service Contract Headers</relationshipLabel>
        <relationshipName>Service_Contract_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Header_End_Date__c</fullName>
        <label>Contract Header End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Header_Start_Date__c</fullName>
        <label>Contract Header Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Header_Status__c</fullName>
        <label>Contract Header Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Notes__c</fullName>
        <label>Oracle Contract Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <formula>ROUND (

IF(

CEILING((  Contract_Header_End_Date__c  - Contract_Header_Start_Date__c ) / 365 * 12) &lt; 1, 1, ( Contract_Header_End_Date__c  - Contract_Header_Start_Date__c) / 365 * 12

)
, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used for Cases</inlineHelpText>
        <label>Default Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Service_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oracle_Cloud_Id__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Cloud Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Contract_Header_ID__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Contract Header ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Contract_Number__c</fullName>
        <label>Oracle Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Contract_Version__c</fullName>
        <label>Oracle Contract Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Currency__c</fullName>
        <label>Oracle Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Service Contract Headers</relationshipLabel>
        <relationshipName>Service_Contract_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Type__c</fullName>
        <label>Renewal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Care</fullName>
                </value>
                <value>
                    <fullName>Care+</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Contract Headers (Ship To Account)</relationshipLabel>
        <relationshipName>Service_Contract_Headers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Service Contract Headers (Ship To Address)</relationshipLabel>
        <relationshipName>Service_Contract_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Local_Currency__c</fullName>
        <label>Z_DO_NOT_USE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Local_Currency_f__c</fullName>
        <formula>Total_Local_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Local Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Contract Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Contract Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>